--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.networkoverviewitem.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.networkoverviewitem.default.yml
@@ -1,26 +1,28 @@
-uuid: c6a779f2-88a2-4609-8d8b-b290c1b0b89d
+uuid: efaf90e7-808e-43f7-be43-f27eec27adb9
 langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.blockblogpost.field_article
-    - field.field.paragraph.blockblogpost.field_styles
-    - paragraphs.paragraphs_type.blockblogpost
+    - field.field.paragraph.networkoverviewitem.field_image
+    - field.field.paragraph.networkoverviewitem.field_link
+    - paragraphs.paragraphs_type.networkoverviewitem
   module:
     - entity_reference_revisions
-id: paragraph.blockblogpost.default
+    - image
+id: paragraph.networkoverviewitem.default
 targetEntityType: paragraph
-bundle: blockblogpost
+bundle: networkoverviewitem
 mode: default
 content:
-  field_article:
+  field_image:
     weight: 1
     label: above
     settings:
-      link: true
+      image_style: ''
+      image_link: ''
     third_party_settings: {  }
-    type: entity_reference_label
-  field_styles:
+    type: image
+  field_link:
     weight: 0
     label: above
     settings:
