--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "drupal/field_group": "1.0-rc6",
         "drupal/jquery_colorpicker": "1.0-rc2",
         "drupal/sqlsrv": "1.0-rc4",
-        "david/mssql": "dev-master"
+        "david/mssql": "dev-master",
+        "drupal/color_field": "2.0-rc1"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
