--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockquote.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockquote.default.yml
@@ -3,9 +3,9 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.blockquote.field_description
     - field.field.paragraph.blockquote.field_image
     - field.field.paragraph.blockquote.field_label
-    - field.field.paragraph.blockquote.field_paragraph
     - field.field.paragraph.blockquote.field_styles
     - field.field.paragraph.blockquote.field_title
     - image.style.thumbnail
@@ -14,7 +14,6 @@ dependencies:
     - field_group
     - image
     - paragraphs
-    - text
 third_party_settings:
   field_group:
     group_styles:
@@ -34,6 +33,13 @@ targetEntityType: paragraph
 bundle: blockquote
 mode: default
 content:
+  field_description:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   field_image:
     weight: 4
     settings:
@@ -48,13 +54,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
-  field_paragraph:
-    weight: 1
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
   field_styles:
     weight: 5
     settings:
