--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmap.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmap.default.yml
@@ -3,10 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.blockmap.field_autoplay
     - field.field.paragraph.blockmap.field_image
+    - field.field.paragraph.blockmap.field_image2
     - field.field.paragraph.blockmap.field_label
-    - field.field.paragraph.blockmap.field_steps_text
+    - field.field.paragraph.blockmap.field_steps_map
     - field.field.paragraph.blockmap.field_styles
     - field.field.paragraph.blockmap.field_value
     - paragraphs.paragraphs_type.blockmap
@@ -18,17 +18,16 @@ targetEntityType: paragraph
 bundle: blockmap
 mode: default
 content:
-  field_autoplay:
-    weight: 5
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
   field_image:
     weight: 2
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+  field_image2:
+    weight: 8
     label: above
     settings:
       image_style: ''
@@ -42,13 +41,14 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  field_steps_text:
-    weight: 1
+  field_steps_map:
+    type: entity_reference_revisions_entity_view
+    weight: 7
     label: above
     settings:
-      link_to_entity: false
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    type: string
   field_styles:
     weight: 0
     label: above
