--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmapsecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmapsecondary.default.yml
@@ -4,12 +4,17 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.blockmapsecondary.field_heading
+    - field.field.paragraph.blockmapsecondary.field_image
+    - field.field.paragraph.blockmapsecondary.field_image2
+    - field.field.paragraph.blockmapsecondary.field_label
     - field.field.paragraph.blockmapsecondary.field_paragraph
     - field.field.paragraph.blockmapsecondary.field_styles
     - field.field.paragraph.blockmapsecondary.field_subheading
+    - field.field.paragraph.blockmapsecondary.field_value
     - paragraphs.paragraphs_type.blockmapsecondary
   module:
     - entity_reference_revisions
+    - image
     - text
 id: paragraph.blockmapsecondary.default
 targetEntityType: paragraph
@@ -18,6 +23,29 @@ mode: default
 content:
   field_heading:
     weight: 3
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_image:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+  field_image2:
+    weight: 7
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+  field_label:
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -44,4 +72,12 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+  field_value:
+    weight: 5
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
 hidden: {  }
