--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockquote.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockquote.default.yml
@@ -3,21 +3,27 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.blockquote.field_description
     - field.field.paragraph.blockquote.field_image
     - field.field.paragraph.blockquote.field_label
-    - field.field.paragraph.blockquote.field_paragraph
     - field.field.paragraph.blockquote.field_styles
     - field.field.paragraph.blockquote.field_title
     - paragraphs.paragraphs_type.blockquote
   module:
     - entity_reference_revisions
     - image
-    - text
 id: paragraph.blockquote.default
 targetEntityType: paragraph
 bundle: blockquote
 mode: default
 content:
+  field_description:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   field_image:
     weight: 3
     label: above
@@ -33,12 +39,6 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-  field_paragraph:
-    weight: 0
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
   field_styles:
     weight: 4
     label: above
