--- a/deploy/var/drupal-config/sync/field.field.paragraph.steppurchase.field_paragraph2.yml
+++ b/deploy/var/drupal-config/sync/field.field.paragraph.steppurchase.field_paragraph2.yml
@@ -1,20 +1,20 @@
-uuid: e48069ea-d30e-48c8-9fe6-ba1a9ae5aff5
+uuid: 16439e12-7ea4-42f6-b75e-ae5a6b005653
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_paragraph
-    - paragraphs.paragraphs_type.blockaudiofragment
+    - field.storage.paragraph.field_paragraph2
+    - paragraphs.paragraphs_type.steppurchase
   module:
     - text
-id: paragraph.blockaudiofragment.field_paragraph
-field_name: field_paragraph
+id: paragraph.steppurchase.field_paragraph2
+field_name: field_paragraph2
 entity_type: paragraph
-bundle: blockaudiofragment
-label: Description
+bundle: steppurchase
+label: 'Secondary paragraph'
 description: ''
 required: true
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
