--- a/deploy/var/drupal-config/sync/field.storage.paragraph.field_margin_top.yml
+++ b/deploy/var/drupal-config/sync/field.storage.paragraph.field_margin_top.yml
@@ -13,19 +13,19 @@ settings:
   allowed_values:
     -
       value: 0
-      label: '0'
+      label: None
     -
       value: 1
-      label: '1'
+      label: Small
     -
       value: 2
-      label: '2'
+      label: Large
     -
       value: 3
-      label: '3'
+      label: 'Extra large'
     -
       value: 4
-      label: '4'
+      label: 'Extra extra large'
   allowed_values_function: ''
 module: options
 locked: false
