--- a/deploy/var/drupal-config/sync/core.entity_view_display.node.page.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.node.page.default.yml
@@ -4,9 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_blocks
+    - field.field.node.page.field_metatags
     - node.type.page
   module:
     - entity_reference_revisions
+    - metatag
     - user
 _core:
   default_config_hash: oZ-7vpIJxjxL2up9B5KrJGD0lazQ9aN0P-fIPo6OrSU
@@ -23,6 +25,12 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+  field_metatags:
+    weight: 103
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
   links:
     weight: 101
 hidden: {  }
