--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "drush/drush": "~8.1",
         "drupal/console": "^0.11.3",
         "drupal/menu_admin_per_menu": "^1.0",
-        "drupal/metatag": "1.0-beta11",
+        "drupal/metatag": "1.0",
         "drupal/paragraphs": "dev-1.x#fa525bd",
         "drupal/restui": "1.13",
         "drupal/search_api": "1.0-beta3",
