--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -21,6 +21,9 @@ module:
   jquery_colorpicker: 0
   link: 0
   menu_ui: 0
+  metatag: 0
+  metatag_open_graph: 0
+  metatag_twitter_cards: 0
   mm_decoupled: 0
   mm_release_tracker: 0
   mm_rest: 0
@@ -41,6 +44,7 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   toolbar_menu: 0
   update: 0
