--- a/deploy/htdocs/api/mock/knowledge-center.json
+++ b/deploy/htdocs/api/mock/knowledge-center.json
@@ -33,7 +33,7 @@
 					"applyLabel": "Apply",
 					"filters": [
 						{
-							"type": "category",
+							"type": 0,
 							"label": "Category",
 							"options": [
 								{
@@ -47,7 +47,7 @@
 							]
 						},
 						{
-							"type": "document_type",
+							"type": 1,
 							"label": "Document Type",
 							"options": [
 								{
@@ -77,7 +77,7 @@
 							]
 						},
 						{
-							"type": "platform",
+							"type": 2,
 							"label": "Platform",
 							"options": [
 								{
@@ -99,7 +99,7 @@
 							]
 						},
 						{
-							"type": "market",
+							"type": 3,
 							"label": "Market",
 							"options": [
 								{
