Add Init endpoint.
Test: #131

--- a/deploy/var/drupal-config/sync/user.role.anonymous.yml
+++ b/deploy/var/drupal-config/sync/user.role.anonymous.yml
@@ -16,3 +16,4 @@ permissions:
   5: 'restful get spectrum_rest_page_v1'
   6: 'restful get spectrum_rest_searchpages_v1'
   7: 'restful get spectrum_rest_searcharticles_v1'
+  8: 'restful get spin_rest_init_v1'
