--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,9 @@
         "drupal/jquery_colorpicker": "1.0-rc2",
         "drupal/sqlsrv": "1.0-rc4",
         "david/mssql": "dev-master",
-        "drupal/color_field": "2.0-rc1"
+        "drupal/color_field": "2.0-rc1",
+        "drupal/toolbar_menu": "1.3",
+        "drupal/pathauto": "1.0-rc1"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
