--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -5,6 +5,7 @@ module:
   ckeditor: 0
   color_field: 0
   config: 0
+  ctools: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -53,6 +54,7 @@ module:
   views_ui: 0
   menu_admin_per_menu: 1
   menu_link_content: 1
+  pathauto: 1
   views: 10
   paragraphs: 11
   standard: 1000
