Add dummy Article endpoint.

--- a/deploy/var/drupal-config/sync/user.role.anonymous.yml
+++ b/deploy/var/drupal-config/sync/user.role.anonymous.yml
@@ -17,3 +17,4 @@ permissions:
   6: 'restful get spectrum_rest_searchpages_v1'
   7: 'restful get spectrum_rest_searcharticles_v1'
   8: 'restful get spin_rest_init_v1'
+  9: 'restful get spectrum_rest_article_v1'
