--- a/deploy/var/drupal-config/sync/user.role.authenticated.yml
+++ b/deploy/var/drupal-config/sync/user.role.authenticated.yml
@@ -23,3 +23,4 @@ permissions:
   - 'restful get spectrum_rest_searchpages_v1'
   - 'restful get spectrum_rest_searcharticles_v1'
   - 'restful get spin_rest_init_v1'
+  - 'restful get spectrum_rest_article_v1'
