--- a/deploy/var/drupal-config/sync/core.extension.yml
+++ b/deploy/var/drupal-config/sync/core.extension.yml
@@ -41,6 +41,7 @@ module:
   search_api_db: 0
   serialization: 0
   spectrum_rest: 0
+  spectrum_settings: 0
   sqlsrv: 0
   system: 0
   taxonomy: 0
