Latest copy updates

--- a/deploy/htdocs/api/mock/knowledge-center.json
+++ b/deploy/htdocs/api/mock/knowledge-center.json
@@ -126,7 +126,7 @@
 					"link": {
 						"label": "Read the FAQS",
 						"title": "Read the FAQS",
-						"target": "faq",
+						"target": "knowledge-center",
 						"type": 0
 					}
 				}
