--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.networkoverviewitem.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.networkoverviewitem.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.networkoverviewitem.field_image
     - field.field.paragraph.networkoverviewitem.field_link
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.networkoverviewitem
   module:
     - entity_reference_revisions
@@ -18,7 +19,7 @@ content:
     weight: 1
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
