--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockimagewithcontent.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockimagewithcontent.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.paragraph.blockimagewithcontent.field_link
     - field.field.paragraph.blockimagewithcontent.field_paragraph
     - field.field.paragraph.blockimagewithcontent.field_styles
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.blockimagewithcontent
   module:
     - entity_reference_revisions
@@ -47,7 +48,7 @@ content:
     weight: 4
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
