--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocksmallimage.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blocksmallimage.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.blocksmallimage.field_alignment
     - field.field.paragraph.blocksmallimage.field_image
     - field.field.paragraph.blocksmallimage.field_styles
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.blocksmallimage
   module:
     - entity_reference_revisions
@@ -26,7 +27,7 @@ content:
     weight: 1
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
