--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slideheromain.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.slideheromain.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.paragraph.slideheromain.field_link
     - field.field.paragraph.slideheromain.field_paragraph
     - field.field.paragraph.slideheromain.field_statistics
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.slideheromain
   module:
     - entity_reference_revisions
@@ -29,7 +30,7 @@ content:
     weight: 3
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
