--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.steppurchase.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.steppurchase.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.steppurchase.field_image
     - field.field.paragraph.steppurchase.field_paragraph
     - field.field.paragraph.steppurchase.field_paragraph2
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.steppurchase
   module:
     - image
@@ -27,7 +28,7 @@ content:
     weight: 2
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
