--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.stories.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.paragraph.stories.field_image
     - field.field.paragraph.stories.field_image2
     - field.field.paragraph.stories.field_paragraph
+    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.stories
   module:
     - image
@@ -27,7 +28,7 @@ content:
     weight: 2
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
@@ -35,7 +36,7 @@ content:
     weight: 3
     label: above
     settings:
-      image_style: ''
+      image_style: preview_500xauto
       image_link: ''
     third_party_settings: {  }
     type: image
