--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "david/mssql": "dev-master",
         "drupal/color_field": "2.0-rc1",
         "drupal/toolbar_menu": "1.3",
-        "drupal/pathauto": "1.0-rc1"
+        "drupal/pathauto": "1.0-rc1",
+        "drupal/imagick": "1.0"
     },
     "repositories": {
         "mediamonks-drupal-decoupled": {
