--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.blockherosecondary.field_background_color
+    - field.field.paragraph.blockherosecondary.field_file
     - field.field.paragraph.blockherosecondary.field_heading
     - field.field.paragraph.blockherosecondary.field_image
     - field.field.paragraph.blockherosecondary.field_link
@@ -14,6 +15,7 @@ dependencies:
   module:
     - color_field
     - entity_reference_revisions
+    - file
     - image
     - text
 id: paragraph.blockherosecondary.default
@@ -29,6 +31,12 @@ content:
       opacity: true
     third_party_settings: {  }
     type: color_field_formatter_text
+  field_file:
+    weight: 6
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: file_default
   field_heading:
     weight: 4
     label: above
