--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.networkoverviewitem.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.networkoverviewitem.default.yml
@@ -20,10 +20,11 @@ third_party_settings:
       weight: 0
       format_type: details
       format_settings:
+        label: Link
+        open: true
         id: ''
         classes: ''
-        open: true
-        required_fields: true
+        required_fields: false
       label: Link
 id: paragraph.networkoverviewitem.default
 targetEntityType: paragraph
