--- a/deploy/htdocs/modules/custom/spectrum_settings/spectrum_settings.routing.yml
+++ b/deploy/htdocs/modules/custom/spectrum_settings/spectrum_settings.routing.yml
@@ -1,4 +1,4 @@
-spin_settings.admin_settings_form:
+spectrum_settings.admin_settings_form:
   path: '/admin/config/spectrum'
   defaults:
     _form: '\Drupal\spectrum_settings\Form\SpectrumSettingsForm'
