--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmarketmap.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockmarketmap.default.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.paragraph.blockmarketmap.field_description
+    - field.field.paragraph.blockmarketmap.field_filter_label
     - field.field.paragraph.blockmarketmap.field_heading
     - field.field.paragraph.blockmarketmap.field_image
     - field.field.paragraph.blockmarketmap.field_label
@@ -18,6 +20,20 @@ targetEntityType: paragraph
 bundle: blockmarketmap
 mode: default
 content:
+  field_description:
+    weight: 5
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_filter_label:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   field_heading:
     weight: 1
     label: above
